# ConeProject

./: SUBMISSION.md
maps/: both_cones.yaml  convert_png.py
src/cone_detection/: package.xml  setup.cfg  setup.py
src/cone_detection/cone_detection/: best.pt  camera_node.py  cone_colour_detection.py  cone_colour_detection_node.py  process_node.py  pure_pursuit_node.py  rviz_utils.py  waypoint_node.py
src/cone_detection/config/: cones.csv  left_wall.csv  params.yml  right_wall.csv
src/cone_detection/launch/: launch.py
src/lab7_pkg/: package.xml  setup.py
src/lab7_pkg/config/: params.yml  waypoints.csv
src/lab7_pkg/lab7_pkg/: rrt_algo.py  rrt_node.py  waypoint_viz_node.py
src/lab7_pkg/launch/: launch.py
