<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cone_detection</name>
  <version>0.0.0</version>
  <description>f1tenth cone_detection</description>
  <maintainer email="sathish@ece.ubc.ca">sathish gopalakrishnan</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>python-matplotlib</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
